# MAizeBargAIn-agentbeats

./: .dockerignore  .gitignore  Dockerfile  README.md  SUBMISSION.md  pyproject.toml  requirements.txt  rnad.py  scenario.toml  test_config.json
.github/workflows/: publish.yml
amber/: README.md  amber-manifest-green.json5  amber-manifest-purple.json5  amber-scenario.json5
results/: README.md  aspiration_result.json  baseline_evaluation.json  ironshell-ui-20260307-021634.json  nfsp_result.json  rnad_result.json  soft_result.json  tough_result.json  walk_result.json
scenarios/bargaining/: __init__.py  bargaining_green.py  green_agent.toml
scenarios/bargaining/bargaining_env/: main.py  mene_solver.py  pyspiel_runner.py  run_entire_matrix.py
scenarios/bargaining/bargaining_env/agents/: nfsp.py
scenarios/bargaining/open_spiel/open_spiel/games/negotiation/: negotiation.cc  negotiation.h  negotiation_test.cc
scenarios/bargaining/open_spiel/open_spiel/python/algorithms/tf/: nfsp.py
scenarios/debate/: __init__.py
submissions/: ironshell-ui-20260307-021634.provenance.json  ironshell-ui-20260307-021634.toml
