[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbeats-tutorial"
version = "0.1.0"
description = "Agentbeats Tutorial"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "a2a-sdk>=0.3.5",
    "google-adk>=1.14.1",
    "google-genai>=1.36.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "numpy>=1.26.0",
    "cvxpy>=1.4.0",
    "ecos>=2.0.0",
    # RL dependencies for NFSP/RNAD agents
    "torch>=2.0.0",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "dm-haiku>=0.0.12",
    "optax>=0.1.7",
    "chex>=0.1.8",
    "rlax>=0.1.6",
    "ml-collections>=0.1.1",
]

[project.scripts]
agentbeats-run = "agentbeats.run_scenario:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.18.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentbeats"]
